platform/ory-hydra/k8s/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-hydra-public
  namespace: auth
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: https-auth

  hostnames:
    - auth.donation-app.local

  rules:
    - backendRefs:
        - name: hydra-public
          namespace: auth
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /authorize
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/" # "/authorize" to "/" for internal service
